@@ -93,6 +93,7 @@ Abbreviated Changelog from 2.4.1 Final
 - Added inconsistencies tool which allows you to track down faulty/broken references to deleted contents or pages or components. Also enables you to delete such references.
 - Added feature so you now can specify disallowedComponentNames instead of allowedComponentNames on slots if you want. 
 - Made so the inconsistenciesController gets a chance to remove references to stuff that are getting deleted.
+- Added so warning mail, which can be sent when a page takes more than x seconds, contains what other long thread are active in the system. Of huge value from a debug perspective.
  
 -------------------------------------------------------------------------------------
 - InfoGlue 2.4.1 Final
